--- a/app/src/main/res/layout/item_feed.xml
+++ b/app/src/main/res/layout/item_feed.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_feed_top" />
 
-        <com.mxn.soul.flowingdrawer.SquaredFrameLayout
+        <com.guanqing.subredditor.SquaredFrameLayout
             android:id="@+id/vImageRoot"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -30,8 +30,7 @@
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop" />
 
-
-        </com.mxn.soul.flowingdrawer.SquaredFrameLayout>
+        </com.guanqing.subredditor.SquaredFrameLayout>
 
         <ImageView
             android:id="@+id/ivFeedBottom"
@@ -69,7 +68,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:gravity="center_vertical|right">
+                android:gravity="center_vertical|end">
 
                 <ImageView
                     android:layout_width="wrap_content"
