--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
             android:id="@+id/rvFeed"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scrollbars="none"
+            android:scrollbarStyle="outsideOverlay"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
         <android.support.design.widget.AppBarLayout
@@ -29,7 +29,6 @@
                 android:id="@+id/toolbar"
                 layout="@layout/view_feed_toolbar" />
         </android.support.design.widget.AppBarLayout>
-
 
     </android.support.design.widget.CoordinatorLayout>
 
