figured out data retrieve task

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,19 +14,31 @@
     <!-- Login progress -->
     <LinearLayout
         android:id="@+id/login_process"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:visibility="visible"
+        android:visibility="gone"
         android:gravity="center">
 
-        <com.wang.avi.AVLoadingIndicatorView
-            android:id="@+id/avLoadingIndicator"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:indicator="Pacman"
-            app:indicator_color="@color/primary_dark"
-            android:layout_gravity="center"
+        <WebView
+            android:id="@+id/login_webview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="visible"></WebView>
+
+        <fr.castorflex.android.circularprogressbar.CircularProgressBar
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="72dp"
+            android:layout_height="72dp"
+            android:indeterminate="true"
+            app:cpb_color="#FFee44"
+            app:cpb_colors="@array/progressbarColors"
+            app:cpb_rotation_speed="1.0"
+            app:cpb_sweep_speed="1.0"
+            app:cpb_stroke_width="6dp"
+            app:cpb_min_sweep_angle="10"
+            app:cpb_max_sweep_angle="300"
             />
 
         <TextView
@@ -118,4 +130,8 @@
 
         </LinearLayout>
     </ScrollView>
+
+
+
+
 </LinearLayout>
