--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,6 +57,15 @@
             android:paddingRight="10dp"
             android:paddingEnd="10dp"
             />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/myFAB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/abc_ic_menu_share_mtrl_alpha"
+            app:elevation="4dp" />
     </RelativeLayout>
+
+
 
 </com.mxn.soul.flowingdrawer_core.LeftDrawerLayout>
