--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,7 +24,7 @@
             android:id="@+id/login_webview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="visible"></WebView>
+            android:visibility="gone"/>
 
         <fr.castorflex.android.circularprogressbar.CircularProgressBar
             xmlns:android="http://schemas.android.com/apk/res/android"
