create welcome dialog
adjust zoom dialog to fit screen size;
create Constants.java to get screen sizes;

--- a/app/src/main/res/layout/list_item_feed.xml
+++ b/app/src/main/res/layout/list_item_feed.xml
@@ -17,11 +17,13 @@
         android:orientation="vertical">
 
         <!--suppress AndroidLintContentDescription -->
-        <com.guanqing.subredditor.UI.DynamicHeightNetworkImageView
+        <ImageView
             android:id="@+id/ivFeedThumbnail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            android:maxHeight="500dp"
             android:background="@color/photo_placeholder" />
 
         <com.guanqing.subredditor.UI.GifView
