--- a/app/src/main/res/layout/fragment_zoom_dialog.xml
+++ b/app/src/main/res/layout/fragment_zoom_dialog.xml
@@ -6,10 +6,11 @@
     android:layout_height="match_parent">
 
     <!--suppress AndroidLintContentDescription -->
-    <com.guanqing.subredditor.UI.DynamicHeightNetworkImageView
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
         android:background="@color/photo_placeholder" />
 
     <TextView
