--- a/app/src/main/res/layout/fragment_gif_dialog.xml
+++ b/app/src/main/res/layout/fragment_gif_dialog.xml
@@ -1,24 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        app:spb_sections_count="3"
+        app:cpb_colors="@array/progressbarColors"
+        app:spb_speed="2.5"
+        app:spb_stroke_width="4dp"
+        app:spb_stroke_separator_length="4dp"
+        app:spb_reversed="false"
+        app:spb_mirror_mode="false"
+        app:spb_progressiveStart_activated="true"
+        app:spb_progressiveStart_speed="1.8"
+        app:spb_progressiveStop_speed="3.4"
+        />
+
     <!--suppress AndroidLintContentDescription -->
-    <ImageView
-        android:id="@+id/ivFeedThumbnail_detail"
+    <com.guanqing.subredditor.UI.GifView
+        android:id="@+id/ivGifThumbnail_detail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        android:scaleType="fitStart"
+        android:scaleType="fitCenter"
         android:background="@color/photo_placeholder" />
 
     <TextView
         android:id="@+id/tvFeedTitle_detail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="6dp"
+        android:layout_margin="8dp"
         android:maxLines="3"
         android:textSize="14sp"
         android:text="No description"/>
@@ -40,7 +57,7 @@
 
         <ImageButton
             android:id="@+id/btnShare_detail"
-            android:padding="4dp"
+            android:padding="2dp"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:background="@drawable/btn_feed_action"
@@ -49,7 +66,7 @@
 
         <ImageButton
             android:id="@+id/btnComments_detail"
-            android:padding="4dp"
+            android:padding="2dp"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:background="@drawable/btn_feed_action"
@@ -71,7 +88,7 @@
 
             <ImageView
                 android:id="@+id/ivUpvotes"
-                android:padding="2dp"
+                android:padding="4dp"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:src="@drawable/ic_arrow_up" />
@@ -79,25 +96,24 @@
             <com.guanqing.subredditor.UI.UpvoteTextSwitcher
                 android:id="@+id/tsUpvotesCounter_detail"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:inAnimation="@anim/slide_in_upvotes_counter"
                 android:outAnimation="@anim/slide_out_upvotes_counter">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    android:padding="4dp"
                     android:text="1989"
                     android:textColor="@android:color/darker_gray" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    android:padding="4dp"
                     android:text="1990"
                     android:textColor="@color/text_like_counter" />
             </com.guanqing.subredditor.UI.UpvoteTextSwitcher>
         </LinearLayout>
-
     </LinearLayout>
 </LinearLayout>
