--- a/app/src/main/res/layout/view_global_menu_header.xml
+++ b/app/src/main/res/layout/view_global_menu_header.xml
@@ -27,12 +27,13 @@
             android:textStyle="bold" />
 
         <ImageButton
+            android:id="@+id/btnLogout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_margin="16dp"
             android:background="@android:color/transparent"
-            android:src="@drawable/ic_global_menu_search" />
+            android:src="@drawable/ic_logout" />
 
     </LinearLayout>
 
