--- a/app/src/main/res/layout/fragment_gif_dialog.xml
+++ b/app/src/main/res/layout/fragment_gif_dialog.xml
@@ -7,11 +7,12 @@
     android:layout_height="wrap_content">
 
     <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
+        android:id="@+id/pbSmooth_detail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:indeterminate="true"
         app:spb_sections_count="3"
-        app:cpb_colors="@array/progressbarColors"
+        app:spb_colors="@array/progressbarColors"
         app:spb_speed="2.5"
         app:spb_stroke_width="4dp"
         app:spb_stroke_separator_length="4dp"
@@ -104,14 +105,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="4dp"
-                    android:text="1989"
+                    android:text="1989 upvotes"
                     android:textColor="@android:color/darker_gray" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="4dp"
-                    android:text="1990"
+                    android:text="1990 upvotes"
                     android:textColor="@color/text_like_counter" />
             </com.guanqing.subredditor.UI.UpvoteTextSwitcher>
         </LinearLayout>
