--- a/app/src/main/res/layout/list_item_feed.xml
+++ b/app/src/main/res/layout/list_item_feed.xml
@@ -59,7 +59,7 @@
                 android:src="@drawable/ic_chat_bubble_outline" />
 
             <TextView
-                android:id="@+id/tvComments"
+                android:id="@+id/tvComments_detail"
                 android:gravity="center_vertical|end"
                 android:layout_width="wrap_content"
                 android:layout_height="22dp"
@@ -83,7 +83,7 @@
                     android:id="@+id/tvUpvotesCounter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="1989"
+                    android:text="1989 upvotes"
                     android:textColor="@android:color/darker_gray" />
 
             </LinearLayout>
