--- a/app/src/main/res/layout/fragment_zoom_dialog.xml
+++ b/app/src/main/res/layout/fragment_zoom_dialog.xml
@@ -26,12 +26,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp">
+        android:paddingLeft="6dp"
+        android:paddingRight="6dp">
 
         <ImageButton
             android:id="@+id/btnSave_detail"
-            android:padding="2dp"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:background="@drawable/btn_feed_action"
@@ -71,7 +72,8 @@
 
             <ImageView
                 android:id="@+id/ivUpvotes"
-                android:padding="2dp"
+                android:paddingTop="2dp"
+                android:paddingBottom="2dp"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:src="@drawable/ic_arrow_up" />
@@ -87,14 +89,18 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="1989 upvotes"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
+                    android:text="1989 karma"
                     android:textColor="@android:color/darker_gray" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="1990 upvotes"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
+                    android:text="1990 karma"
                     android:textColor="@color/text_like_counter" />
             </com.guanqing.subredditor.UI.UpvoteTextSwitcher>
         </LinearLayout>
