--- a/app/src/main/res/layout/list_item_feed.xml
+++ b/app/src/main/res/layout/list_item_feed.xml
@@ -83,7 +83,7 @@
                     android:id="@+id/tvUpvotesCounter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="1989 upvotes"
+                    android:text="1989"
                     android:textColor="@android:color/darker_gray" />
 
             </LinearLayout>
