--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -11,14 +11,15 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/user_login_icon"
+            android:id="@+id/user_avatar"
             android:layout_width="@dimen/global_menu_avatar_size"
             android:layout_height="@dimen/global_menu_avatar_size"
-            android:src="@drawable/profile_icon"
+            android:src="@drawable/avatar_purple"
             android:layout_gravity="center"
             android:layout_margin="12dp" />
 
         <TextView
+            android:id="@+id/welcome_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
