--- a/app/src/main/res/anim/zoom_out_dialog.xml
+++ b/app/src/main/res/anim/zoom_out_dialog.xml
@@ -9,11 +9,12 @@
         android:fillAfter="false"
         android:duration="200"
         android:pivotX = "50%"
-        android:pivotY = "-90%"
+        android:pivotY = "0%"
         />
     <translate
         android:fromYDelta="0"
-        android:toYDelta="50%"
-        android:duration="200"
+        android:toYDelta="100%"
+        android:duration="400"
+        android:interpolator="@android:anim/accelerate_interpolator"
         />
 </set>
