--- a/app/src/main/res/layout/dialog_zoom.xml
+++ b/app/src/main/res/layout/dialog_zoom.xml
@@ -10,8 +10,9 @@
         android:id="@+id/ivFeedThumbnail_detail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:minHeight="100dp"
         android:adjustViewBounds="true"
-        android:scaleType="fitStart"
+        android:scaleType="fitCenter"
         android:background="@color/photo_placeholder" />
 
     <TextView
