--- a/app/src/main/res/layout/dialog_zoom.xml
+++ b/app/src/main/res/layout/dialog_zoom.xml
@@ -1,109 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <!--suppress AndroidLintContentDescription -->
-    <ImageView
-        android:id="@+id/ivFeedThumbnail_detail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:scaleType="fitCenter"
-        android:background="@color/photo_placeholder" />
-
-    <TextView
-        android:id="@+id/tvFeedTitle_detail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="6dp"
-        android:maxLines="3"
-        android:textSize="14sp"
-        android:text="No description"/>
+    android:layout_height="match_parent"
+    android:id="@+id/scrollView" >
 
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="6dp"
-        android:paddingRight="6dp">
+        android:layout_height="wrap_content">
 
-        <ImageButton
-            android:id="@+id/btnSave_detail"
-            android:paddingTop="2dp"
-            android:paddingBottom="2dp"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:background="@drawable/btn_feed_action"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_bookmark_border" />
-
-        <ImageButton
-            android:id="@+id/btnShare_detail"
-            android:padding="4dp"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:background="@drawable/btn_feed_action"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_share" />
-
-        <ImageButton
-            android:id="@+id/btnComments_detail"
-            android:padding="4dp"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:background="@drawable/btn_feed_action"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_chat_bubble_outline" />
+        <!--suppress AndroidLintContentDescription -->
+        <ImageView
+            android:id="@+id/ivFeedThumbnail_detail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            android:background="@color/photo_placeholder" />
 
         <TextView
-            android:gravity="center_vertical|end"
-            android:layout_width="wrap_content"
-            android:layout_height="32dp"
-            android:textColor="@android:color/darker_gray"
-            android:text="24"/>
+            android:id="@+id/tvFeedTitle_detail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="6dp"
+            android:maxLines="3"
+            android:textSize="14sp"
+            android:text="No description"/>
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center_vertical|end">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp">
 
-            <ImageView
-                android:id="@+id/ivUpvotes"
+            <ImageButton
+                android:id="@+id/btnSave_detail"
                 android:paddingTop="2dp"
                 android:paddingBottom="2dp"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
-                android:src="@drawable/ic_arrow_up" />
+                android:background="@drawable/btn_feed_action"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_bookmark_border" />
 
-            <com.guanqing.subredditor.UI.UpvoteTextSwitcher
-                android:id="@+id/tsUpvotesCounter_detail"
+            <ImageButton
+                android:id="@+id/btnShare_detail"
+                android:padding="4dp"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:background="@drawable/btn_feed_action"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_share" />
+
+            <ImageButton
+                android:id="@+id/btnComments_detail"
+                android:padding="4dp"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:background="@drawable/btn_feed_action"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_chat_bubble_outline" />
+
+            <TextView
+                android:gravity="center_vertical|end"
                 android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:textColor="@android:color/darker_gray"
+                android:text="24"/>
+
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:inAnimation="@anim/slide_in_upvotes_counter"
-                android:outAnimation="@anim/slide_out_upvotes_counter">
+                android:layout_weight="1"
+                android:gravity="center_vertical|end">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:paddingTop="4dp"
-                    android:paddingBottom="4dp"
-                    android:text="1989 karma"
-                    android:textColor="@android:color/darker_gray" />
+                <ImageView
+                    android:id="@+id/ivUpvotes"
+                    android:paddingTop="2dp"
+                    android:paddingBottom="2dp"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:src="@drawable/ic_arrow_up" />
 
-                <TextView
+                <com.guanqing.subredditor.UI.UpvoteTextSwitcher
+                    android:id="@+id/tsUpvotesCounter_detail"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:paddingTop="4dp"
-                    android:paddingBottom="4dp"
-                    android:text="1990 karma"
-                    android:textColor="@color/text_like_counter" />
-            </com.guanqing.subredditor.UI.UpvoteTextSwitcher>
+                    android:layout_height="match_parent"
+                    android:inAnimation="@anim/slide_in_upvotes_counter"
+                    android:outAnimation="@anim/slide_out_upvotes_counter">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:paddingTop="4dp"
+                        android:paddingBottom="4dp"
+                        android:text="1989 karma"
+                        android:textColor="@android:color/darker_gray" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:paddingTop="4dp"
+                        android:paddingBottom="4dp"
+                        android:text="1990 karma"
+                        android:textColor="@color/text_like_counter" />
+                </com.guanqing.subredditor.UI.UpvoteTextSwitcher>
+            </LinearLayout>
         </LinearLayout>
-
     </LinearLayout>
-</LinearLayout>
+</ScrollView>
