--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <com.mxn.soul.flowingdrawer_core.LeftDrawerLayout
-    android:id="@+id/id_drawerlayout"
+    android:id="@+id/leftDrawer"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -27,9 +27,6 @@
                 android:id="@+id/toolbar"
                 layout="@layout/view_feed_toolbar" />
         </android.support.design.widget.AppBarLayout>
-
-
-
     </android.support.design.widget.CoordinatorLayout>
 
 
