--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -23,7 +23,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Welcome, stranger"/>
+            android:paddingBottom="96dp"
+            android:text="Welcome, Stranger"/>
 
     </LinearLayout>
 
