--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,21 +1,17 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<cn.bingoogolapple.refreshlayout.BGARefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rlBGARefresh"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.guanqing.subredditor.Fragments.MainFragment">
+    android:layout_height="match_parent">
 
-    <cn.bingoogolapple.refreshlayout.BGARefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/rlBGARefresh"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvFeed"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:overScrollMode="never"
+        android:scrollbars="none"
+        />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvFeed"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:scrollbars="none"
- />
+</cn.bingoogolapple.refreshlayout.BGARefreshLayout>
 
-    </cn.bingoogolapple.refreshlayout.BGARefreshLayout>
-</FrameLayout>
