re-code SharedPrefUtil; minor fixes

--- a/app/src/main/res/layout/dialog_gif_zoom.xml
+++ b/app/src/main/res/layout/dialog_gif_zoom.xml
@@ -101,7 +101,7 @@
                     android:paddingBottom="4dp"
                     android:layout_gravity="center"
                     android:text="1990 karma"
-                    android:textColor="@color/text_like_counter" />
+                    android:textColor="@color/text_upvote_counter" />
             </com.guanqing.subredditor.UI.UpvoteTextSwitcher>
         </LinearLayout>
     </LinearLayout>
