--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -60,7 +60,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/user_avatar"
+                android:id="@+id/ivAvatar"
                 android:layout_width="@dimen/global_menu_avatar_size"
                 android:layout_height="@dimen/global_menu_avatar_size"
                 android:src="@drawable/avatar"
