--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,5 +6,6 @@
 
     <dimen name="user_profile_avatar_size">88dp</dimen>
     <dimen name="global_menu_avatar_size">64dp</dimen>
+    <dimen name="global_menu_avatar_size_large">80dp</dimen>
     <dimen name="default_elevation">8dp</dimen>
 </resources>
