--- a/app/src/main/res/layout/menu_header.xml
+++ b/app/src/main/res/layout/menu_header.xml
@@ -28,11 +28,12 @@
 
         <ImageButton
             android:id="@+id/btnLogout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="2dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:padding="4dp"
             android:layout_gravity="center_vertical"
-            android:layout_margin="16dp"
+            android:scaleType="fitCenter"
+            android:layout_margin="12dp"
             android:background="@android:color/transparent"
             android:src="@drawable/ic_logout" />
 
