implement FrontPageAdapter and make it work with data

--- a/app/src/main/res/layout/dialog_gif_zoom.xml
+++ b/app/src/main/res/layout/dialog_gif_zoom.xml
@@ -58,6 +58,7 @@
             android:src="@drawable/ic_chat_bubble_outline" />
 
         <TextView
+            android:id="@+id/tvComments_detail"
             android:gravity="center_vertical|end"
             android:layout_width="wrap_content"
             android:layout_height="32dp"
